--- a/v2/less/footer.less
+++ b/v2/less/footer.less
@@ -23,18 +23,6 @@ footer{
             .navFootBtn();
         
         }
-        button.plan{
-                    
-            .btninfo(@btn1);
-            
-        }
-        button.learn{
-            .btninfo(@btn2);
-        }
-        button.getin{
-            .btninfo(@btn3);
-        }
-
         button.ftbtn{
             display:@f;
             //flex-wrap: wrap;
