--- a/v2/less/mixins.less
+++ b/v2/less/mixins.less
@@ -95,11 +95,11 @@ font-family: 'Roboto Mono', monospace;
 }
 
 .pPc(){
-    background-color:#FFFFFF;
+    background-color:greenyellow;
     font-family:'Roboto Mono', monospace;
 							font-size:1.2rem;
 							width:80%;
-							height:30rem;
+							height:100%;
 						//	margin-right:26rem; // Position p to be @ced
 }
 
@@ -127,12 +127,12 @@ font-family: 'Roboto Mono', monospace;
 		flex-direction: @fc;
         width:70vw; /* Move the black box top middle section */
         height:30vh;
-        background-color: #DDB9A3;
+        background-color: black;
 		font-size:1.1rem; // Desktop sizing
 		color:white;
 }
 .secDiv(){
-    background-color: #FFFFFF;
+    background-color: red;
 		//width:40%;
 		//height:16rem;
 		margin:1rem;
@@ -155,15 +155,15 @@ font-family: 'Roboto Mono', monospace;
 /* Footer laster area where the picture starts */
 
 .footerFoot(){
-    background-color: #FFFFFF;
+    background-color: blueviolet;
 	width:@hn;
 	height:36rem;
-	//margin:0rem .7rem .7rem .7rem;
+	margin:0rem .7rem .7rem .7rem;
 }
 
 .footerFootImg(){
-    width:@hn;
-		height:63vh;
+    width:85%;
+		height:20rem;
 }
 
 .foot(){
@@ -178,7 +178,7 @@ font-family: 'Roboto Mono', monospace;
 }
 
 .footNavcon(){
-    background-color: #F9E7DC;
+    background-color: black;
 		width:@hn;
 		height:12rem;
 }
