--- a/v2/less/navigation.less
+++ b/v2/less/navigation.less
@@ -14,15 +14,15 @@ header{
 				button{
 					.button();
                         }
-                button.plan{
+                button#plan{
                     
                     .btninfo(@btn1);
                     
                 }
-                button.learn{
+                button#learn{
                     .btninfo(@btn2);
                 }
-                button.getin{
+                button#getin{
                     .btninfo(@btn3);
                 }
 
